fix: aumenta visibilidade mobile

--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,7 @@ textarea {
   }
 }
 
-@media (min-width: 800px) {
+@media (max-width: 800px) {
 
   .Roadmap,
   .CartaDeMotivacao,
